--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -68,7 +68,7 @@
                     <div class="d-flex justify-content-between">
                         <div>
                             <h5 class="card-title">Revenue</h5>
-                            <h3>$0</h3>
+                            <h3>${{ "%.2f"|format(stats.total_revenue) }}</h3>
                         </div>
                         <div class="align-self-center">
                             <i class="fas fa-dollar-sign fa-2x"></i>
