--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -29,6 +29,14 @@
                                 <i class="fas fa-sign-in-alt me-2"></i>Sign In
                             </button>
                         </div>
+
+                        <div class="text-center mt-3">
+                        <a href="{{ url_for('auth.forgot_password') }}" class="text-decoration-none">
+                        Forgot your password?
+                        </a>
+                        </div>
+
+
                     </form>
                     
                     <hr>
