added readme changed footer

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -127,7 +127,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-light mt-5 py-4">
         <div class="container text-center">
-            <p>&copy; 2024 BooksCart. Your online destination for books.</p>
+            <p>&copy; 2025-2050 BooksCart. Your online destination for books.</p>
         </div>
     </footer>
     
